Revision history for Path-Dispatcher

0.08

0.07 Wed Jan 28 01:39:37 2009
        Paths are now boxed with the new Path::Dispatcher::Path.

        New rule type "Intersection" which matches only when each of its
        subrules match.

        New rule type "Metadata" which matches the optional metadata (a hash)
        of the path. The sugar for this is: on { foo => "bar" }

        New rule type "Eq" which just does basic string equality.

        Rules can now be named. In Path::Dispatcher::Declarative, each rule is
        named with its dispatcher's name and the file:line where the rule was
        defined.

        Dispatch tracing output, for debugging. Set environment variable
        PATH_DISPATCHER_TRACE to a number. The higher the number, the more
        output will be generated. The current maximum value of 10 will dump
        code references.

0.06 Sat Nov 15 21:02:29 2008
        New rule type "Empty" which matches only the empty path.

        Declarative:
            on '' now matches only the empty path.

0.05 Sat Nov 15 16:36:41 2008
        Improve test coverage
        New rule type "Always" which always matches.

        Match:
            ends_dispatch is now an attribute

        Rule::Tokens:
            Support for case insensitive matching
            Fix for tokens' type constraint

        Dispatcher:
            Allow rules to be specified in the constructor (a typo prevented it)

        Dispatch:
            first_match, has_match methods which do what you'd expect
            The run method will now collect return values and return them

        Declarative:
            redispatch_to sugar which adds a Dispatch rule
            "on '' => sub" as a special case will match all paths


0.04 Tue Oct 28 17:56:41 2008
        Dist fixes

0.03 Tue Oct 28 17:42:47 2008
        "rewrite" rules
        Super dispatchers are GONE! Yay.
        New Rule::Dispatch which just takes some other dispatcher. nothingmuch++

        Rule::Tokens: