@@ -4,7 +4,6 @@ name           'Path-Dispatcher';
 all_from       'lib/Path/Dispatcher.pm';
 
 requires 'Moose';
-requires 'MooseX::AttributeHelpers';
 requires 'Sub::Exporter';
 
 build_requires 'Test::More';
