@@ -1,6 +1,7 @@
 Revision history for Path-Dispatcher
 
 0.08
+        Inline uses of MooseX::AttributeHelpers.
 
 0.07 Wed Jan 28 01:39:37 2009
         Paths are now boxed with the new Path::Dispatcher::Path.
